Add characterisation tests for Rect geometry operators
Step 0 of the PageView viewport extraction: pin current behaviour of the
operators underpinning toScreenCoordinates/toPageCoordinates before that
logic moves. The existing 204 unit tests cover serialization, sync and
stroke encoding, but nothing guards the viewport maths.

Records behaviour that is easy to break during extraction:
- translation (Rect +/- Offset) rounds to nearest via roundToInt, while
  scaling truncates toward zero via toInt() — an asymmetry worth pinning
- times(arg) delegates to scaleRect(this, 1 / arg); the inversion is
  deliberate and invites "simplification" in the wrong direction
- scaleRect truncates toward zero rather than flooring, so negative
  coordinates differ from the intuitive result
- the screen/page round trip is exact at zoom 1.0 with integral scroll,
  and lossy at fractional zoom

Placed in androidTest rather than test: android.graphics.Rect's
constructor is a no-op on this project's JVM unit-test classpath
(Robolectric is referenced in build comments but is not a dependency),
leaving all fields 0. Assertions comparing two Rects therefore pass
vacuously, so these assert against literal ints and include an explicit
guard that the constructor is functional.

Method names are camelCase because minSdk 29 is below DEX version 040,
which forbids spaces in method names — backtick test names do not dex.

Both hazards are documented in CLAUDE.md.

Verified: 12/12 passing on BOOX Go 10.3 (Android 15).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>